# UMT-pythonweb-hw-11

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 1bf17e0b2953_add_users_table.py  65e76daf9a2c_add_confirmed_field_to_user_model.py  8f161da99a2c_init.py  96ae1c015093_fix_avatar_url_type_in_user_model.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: verify_email.html
src/utils/: birthday_check.py
